# ezclient

./: pyproject.toml
ezclient/: api_client.py
