[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ezclient"
version = "0.0.1"
dependencies = [
    "requests",
]

[tool.setuptools.packages]
find = {}

[tool.ruff]
lint.extend-select = ["I"]

[tool.mypy]
strict = true
no_untyped_defs = true

exclude = '^tests/'
